slowly adding useful features like pull

--- a/views/index.haml
+++ b/views/index.haml
@@ -16,7 +16,9 @@
 %ul.nav
   %li#filelist_btn Toggle Filelist
   %li#save_btn Save File
+  %li#pull_btn Pull
   %li#push_btn Push & Deploy  
+  %li#log_btn Log
   %li#preview_btn Preview
   
 
