--- a/views/layout.haml
+++ b/views/layout.haml
@@ -32,6 +32,8 @@
       = yield_content :jquery
       });
     :javascript
+      
+      var http_host = "#{env["SERVER_NAME"]}"
       $(function(){
         // dom ready
       });
