--- a/views/main.sass
+++ b/views/main.sass
@@ -222,3 +222,26 @@ body
   width: 100%
   height: 500px
   font-size: 1.3em
+  
+#filelist
+  position: relative
+#filelist ul#pane  
+  position: absolute
+  width: 150px
+  border: 2px solid #666
+  li  
+    cursor: pointer
+    opacity: 0.8
+    padding: 4px
+    background: #CCC
+    display: block
+    color: #222
+    font-size: 0.7em
+    border: 1px solid #666
+    border-left: 0
+    border-right: 0
+  li:hover    
+    opacity: 1
+    background: #BBB
+    color: #000
+  
