--- a/views/index.haml
+++ b/views/index.haml
@@ -26,7 +26,8 @@
 #filelist
   %ul#pane{ style: "display: none" }
     %li.delete Delete File
-    %li.new New Folder
+    %li.new_file New File
+    %li.new_folder New Folder
   #filetree.demo
   
 #project{ :"data-name" => "" }
