--- a/views/main.sass
+++ b/views/main.sass
@@ -231,7 +231,7 @@ body
   border: 2px solid #666
   li  
     cursor: pointer
-    opacity: 0.8
+    opacity: 0.9
     padding: 4px
     background: #CCC
     display: block
@@ -240,8 +240,9 @@ body
     border: 1px solid #666
     border-left: 0
     border-right: 0
+    font-weight: bold
   li:hover    
     opacity: 1
-    background: #BBB
+    background: #EEE
     color: #000
   
