--- a/views/main.sass
+++ b/views/main.sass
@@ -1,9 +1,9 @@
 // buttons
 
 @mixin rounded($border)
-  -webkit-border-radius= $border
-  -moz-border-radius= $border
-  border-radius= $border
+  -webkit-border-radius: $border
+  -moz-border-radius: $border
+  border-radius: $border
 
 @mixin shadow
   -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.2)
@@ -11,9 +11,9 @@
   box-shadow: 0 1px 2px rgba(0,0,0,.2)
 
 @mixin gradient($top, $bottom)
-  background-color= $bottom
-  background= -webkit-gradient(linear, left top, left bottom, from($top), to($bottom))
-  background= -moz-linear-gradient(top, $top,  $bottom)
+  background-color: $bottom
+  background: -webkit-gradient(linear, left top, left bottom, from($top), to($bottom))
+  background: -moz-linear-gradient(top, $top,  $bottom)
   filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#{$top}', endColorstr='#{$bottom}')
 
 @mixin button
@@ -38,12 +38,12 @@
 @mixin color($background)
   border: solid 1px darken($background, 3%)
   @include gradient(lighten($background, 13%), $background)
-  color= mix(#fff, $background, 90%)
+  color: mix(#fff, $background, 90%)
   &:hover
     @include gradient(lighten($background, 10%), darken($background, 5%))
   &:active
     @include gradient($background, lighten($background, 10%))
-    color= mix(#fff, $background, 70%)
+    color: mix(#fff, $background, 70%)
 
 button,
 input[type="reset"],
